Fixed sizing on mobile form factor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,4 +373,8 @@ div #contact-container {
     margin-top: 0px;
   }
 
+  #nav-container a {
+    width: 120px;
+  }
+
 }
